--- a/ndpi-iptables-router/CMakeLists.txt
+++ b/ndpi-iptables-router/CMakeLists.txt
@@ -14,6 +14,8 @@ qt_add_executable(appndpi-iptables-router
     networkinterfacemodel.cpp
     dpiworker.h
     dpiworker.cpp
+    protocolmodel.h
+    protocolmodel.cpp
 )
 
 qt_add_qml_module(appndpi-iptables-router
